Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23304

Insert into TEMPORARY TABLE fails to invoke mtr_t::set_modified()

    XMLWordPrintable

Details

    Description

      In MDEV-21724 or possibly already in MDEV-12353 a bug was introduced to the handling of temporary tables.

      Whether or not redo log will be written, mtr_t::set_modified() must be invoked to register any changes to a page. In page_cur_insert_rec_low() we were violating this constraint when inserting into temporary tables.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3.5h
                  3.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.